# life-game

./: Cargo.toml  README.md
server/: bootstrap.js  index.html  index.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
server/public/: index.js
server/utils/: control-button.ts  mouse-navigation.ts  random.ts  reset-button.ts  rules.ts  zoom-control.ts
src/: commands.txt  lib.rs
tests/: test.rs
web/: README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: main.ts
web/src/app/home/view/: HomeView.vue
web/src/assets/: main.css
web/src/router/: index.ts
web/src/shared/components/analytics/: AgeItem.vue  AnalyticsItem.vue  LivePercentageChartItem.vue  PopulationChartItem.vue  PopulationDeltaChartItem.vue
web/src/shared/components/grid/: GridItem.vue
web/src/shared/components/menu/: MenuItem.vue
web/src/shared/components/settings/: AgeItem.vue  RulesItem.vue  RulesList.vue  SettingsItem.vue  SpeedSliderItem.vue
web/src/shared/utils/: color.ts  rules.ts
