[package]
name = "life-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.63"
wasm-bindgen-test = "0.3.30"
wee_alloc = "0.4.5"

# cdylib cannot be compiled for test, use "lib" instead

[lib]
crate-type = ["cdylib"]